@@ -206,6 +206,11 @@ prefix according to the comment style when used inside comments.  If
 you're normally using newline-and-indent, you might want to switch to
 this function.
 
+*** c-hanging-comment-starter-p and c-hanging-comment-ender-p are obsolete.
+The new comment handling code no longer consults these two variables.
+It instead detects how the "hangingness" of the comment delimiters
+looks like currently and simply keeps them that way.
+
 ** Fixes to IDL mode.
 It now does a better job in recognizing only the constructs relevant
 to IDL.  E.g. it no longer matches "class" as the beginning of a
